--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,22 +1,145 @@
- /* The animation code */
-@keyframes IG {
-  0%   {background-color: red;}
-  25%  {background-color: yellow;}
-  50%  {background-color: blue;}
-  100% {background-color: green;}
+ 
+h1 {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 80px;
+  color:red;
+  text-align: center;
+}
+  
+.header-container{
+  display: flex;
+  background-color: rgb(149, 173, 172);
+  
+}
+.myname{
+  flex:1;
 }
 
-/* The element to apply the animation to */
-.insta {
-  width: 200px;
-  height: 200px;
-  background-color: red;
-  animation-name: IG;
-  animation-duration: 4s;
-  animation-iteration-count: infinite;    
-} 
+.profile{
+ flex:1; 
+}
 
-.insta img {
-  width: 200px;
+.paragraph{
+  flex:1;
+}
+.navbar {
+  display: flex;
+ justify-content: space-evenly;
+ background-color:white;
+ position: fixed;
+ width: 100%;
+ top:0%;
+ border: solid 2px;
+}
+
+a:hover{
+  font-size: larger;
+  color:red;
+}
+
+.pic{
+  border-radius: 50%;
+  padding: 15px;
+  /* removed grid row-start */
+}
+
+body {
+  background: url(https://w0.peakpx.com/wallpaper/353/565/HD-wallpaper-pastel-water-color-abstract-blue-colors-gradient-green-light-orange-pink-water-color-yellow.jpg);
+ background-size: cover;
+ border: solid;
+ font-size: large;
+}
+
+
+
+
+.gridcontainer{
+display: grid;
+grid-template-columns: 1fr 1fr;
+gap:10px;
+
+
+}
+.Education{
+  
+  grid-row-start: 1;
+  grid-row-end: 3;
+  padding:10px;
+  border-right: 10px solid;
+  border-bottom: 10px solid;
+  
+}
+.Skills{
+  
+  padding:5px;
+  border-left: 10px solid;
+  border-bottom: 10px solid;
+}
+.Experience{
+  border-left: 10px solid;
+  border-bottom: 10px solid;
+  padding:10px;
+}
+
+/* footer */
+.contacts {
+  padding:10px;
+ flex: 1;
+}
+.footer {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.form{
+  padding: 10px;
+     flex: 1;
+ }
+
+  /* mobilephone */
+
+
+@media  screen and (max-width:600px) {
+  .header-container{
+      font-size: small;
+
+      
+  }
+  
+  body{
+      font-size: small;
+  }
+  .footer{
+      display: contents;
+  }
+.pic{
+  width: 125px;
+  height: 150px;
+}
+h1{
+  font-size: x-large;
+}
+
+}
+/* tablet */
+@media screen and  (min-width:601px) and (max-width:800px) {
+.header-container{
+  font-size: medium;
+  
+}
+
+body{
+      font-size: medium;
+  }
+  .footer{
+      display: contents;
+  }
+.pic{
+  width: 150px;
   height: 200px;
+}
+h1{
+  font-size: 60px;
+}
+
 }
